实拍控详情页 中手表问答页面

--- a/controlDetails.html
+++ b/controlDetails.html
@@ -2282,12 +2282,72 @@
                                </dl>
                            </div>
                         </div>
-                        
+                        <div class="watchright">
+                            <div class="watch-problem">
+                                <div class="top">
+                                    <img src="https://qd2.wbiao.co/img/4.0/ask/propaganda.jpg" alt="">
+                                </div>
+                                <div class="mid">
+                                    <div class="replenish">
+                                        <div class="t">快速提问</div>
+                                        <textarea name="" id="" cols="30" rows="10" placeholder="请在这里简述您的问题"></textarea>
+                                    </div>
+                                    <div class="upbot">
+                                        <div class="upload">
+                                            <input type="file" class="input-file">
+                                            <a href="" class="btn">上传图片</a>
+                                        </div>
+                                        <input type="button" value="免费发布问题" class="freepro">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="qa-num">
+                                <div class="floor">
+                                    <div class="tit">共收到手表咨询数：</div>
+                                    <div class="con">249,891</div>
+                                </div>
+                                <div class="floor">
+                                    <div class="tit">已回答手表咨询数：</div>
+                                    <div class="con">230，797</div>
+                                </div>
+                            </div>
+                            <div class="qa-ua">
+                                <div class="top">网友热问</div>
+                                <div class="middle">
+                                    <a href="javascript:void(0)">浪琴价格</a>
+                                    <a href="javascript:void(0)">浪琴手表用什么机芯</a>
+                                    <a href="javascript:void(0)">万国手表哪里买最便宜</a>
+                                    <a href="javascript:void(0)">爱马仕是哪个国家的品牌</a>
+                                    <a href="javascript:void(0)">女表推荐</a>
+                                    <a href="javascript:void(0)">男表推荐</a>
+                                    <a href="javascript:void(0)">跨境购表的利与弊</a>
+                                    <a href="javascript:void(0)">智能手表哪款好</a>
+                                </div>
+                            </div>
+                            <div class="qa-ea">
+                                <div class="top">
+                                    <div class="tit">精华问题</div>
+                                    <a href="javascript:void(0)">更多<i>></i></a>
+                                </div>
+                                <div class="mid">
+                                    <ul>
+                                        <li><a href="javascript：void(0)"><i>问：</i>卡西欧手表如何调整时间、调日期</a> </li>
+                                        <li><a href="javascript：void(0)"><i>问：</i>爱马仕手表保值吗</a></li>
+                                        <li><a href="javascript：void(0)"><i>问：</i>宝玑手表为什么那么贵</a></li>
+                                        <li><a href="javascript：void(0)"><i>问：</i>阿玛尼机械手表走时准吗，机械机芯走时准吗</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="qa-sb">
+                                <a href="javascript:void(0)"><i>问</i>万表网问答规则说明</a>
+                                <div class="q"><i>答</i>暂无问答</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="yrightArea"> <!--右边广告栏--> 
+        <div class="yrightArea" style="display: none;"> <!--右边广告栏--> 
             <div class="topimg"><img src="https://image2.wbiao.co/others/up/201909/18/156880771371163.jpg" alt=""></div>
             <div class="brand_recommend">
                 <!--头条新闻-->
