主页限时购板块创建

--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,57 @@
             </div>
             <a href="javascript:void(0)">查看更多&gt;</a>
         </div>
+        <div class="index_time_to_buy clearfix wrap">
+            <div class="index_time_to_buy_left_box">
+                <div class="index_time_to_buy_left">
+                    <a href="javascript:void(0)">
+                        <div class="index_time_to_buy_left_txt">
+                            <p class="index_time_to_buy_left_txt1">11.11名表狂欢节 秒杀专场</p>
+                            <p class="index_time_to_buy_left_txt2">限量秒杀 抢完即止</p>
+                        </div>
+                        <i class="index_time_to_buy_left_shadow"></i>
+                        <img src="images/index_time_to_buy_left.jpg" class="test">
+                    </a>
+                </div>
+            </div>
+            <div class="index_buy_list_slider">
+                <div class="index_buy_list_swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                        <div class="swiper-slide">Slide 6</div>
+                        <div class="swiper-slide">Slide 7</div>
+                        <div class="swiper-slide">Slide 8</div>
+                        <div class="swiper-slide">Slide 9</div>
+                        <div class="swiper-slide">Slide 10</div>
+                    </div>
+                </div>
+            </div>
+            <div class="index_but_list_slider_right">
+                <div class="index_buy_list_slider_right_swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                        <div class="swiper-slide">Slide 6</div>
+                        <div class="swiper-slide">Slide 7</div>
+                        <div class="swiper-slide">Slide 8</div>
+                        <div class="swiper-slide">Slide 9</div>
+                        <div class="swiper-slide">Slide 10</div>
+                    </div>
+                    <!-- <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div> -->
+                </div>
+            </div>
+            </div>
+
+        </div>
     </div>
     <!-- 主体部分结束 -->
 
