--- a/w_wanbiao-brand.html
+++ b/w_wanbiao-brand.html
@@ -122,7 +122,29 @@
                 </div>
             </div>
         </div>
-        </div> 
+        <div class="w_blank-top3">
+            <div class="w_blank3-title">
+                <p class="w_blank3-p1">人气商品</p>
+                <p class="w_blank3-p2">THE HOT</p>
+                <p class="w_blank3-p3"></p>
+            </div>
+            <div class="w_blank3-context">
+            </div>
+            <div class="w_blank3-foot">
+                <p class="w_blank3-foot1">查看更多商品</p>
+                <i class="w_blank3-foot2"></i>
+            </div>
+        </div>
+        <div class="w_blank-top4">
+            <div class="w_blank3-title">
+                <p class="w_blank3-p1">人气店铺</p>
+                <p class="w_blank3-p2">THE HOT</p>
+                <p class="w_blank3-p3"></p>
+            </div>
+            <ul class="w_shop-ul">
+            </ul>
+        </div>
+
     </div>
     <script src="js/w_wanbiao-brand.js"></script>
 </body>
