--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
     <!-- 主体部分开始 -->
     <div class="main">
         <!-- 主页轮播开始 -->
-        <div class="swiper-container">
+        <div class="swiper-container1">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <a href="javascript:void(0)">
@@ -1021,10 +1021,10 @@
                 </div>
             </div>
             <!-- 如果需要分页器 -->
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination1"></div>
             <!-- 如果需要导航按钮 -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev1"></div>
+            <div class="swiper-button-next1"></div>
         </div>
         <!-- 主页轮播结束 -->
         <div class="zd_index_list_item wrap">
@@ -1087,6 +1087,8 @@
                         <div class="swiper-slide">Slide 9</div>
                         <div class="swiper-slide">Slide 10</div>
                     </div>
+                    <div class="index_buy_list_swiper-button-next"></div>
+                    <div class="index_buy_list_swiper-button-prev"></div>
                 </div>
             </div>
             <div class="index_but_list_slider_right">
@@ -1097,15 +1099,10 @@
                         <div class="swiper-slide">Slide 3</div>
                         <div class="swiper-slide">Slide 4</div>
                         <div class="swiper-slide">Slide 5</div>
-                        <div class="swiper-slide">Slide 6</div>
-                        <div class="swiper-slide">Slide 7</div>
-                        <div class="swiper-slide">Slide 8</div>
-                        <div class="swiper-slide">Slide 9</div>
-                        <div class="swiper-slide">Slide 10</div>
                     </div>
-                    <!-- <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div> -->
+                    <div class="index_buy_right_swiper-pagination"></div>
+                    <div class="index_buy_right_swiper-button-prev"></div>
+                    <div class="index_buy_right_swiper-button-next"></div>
                 </div>
             </div>
             </div>
