--- a/index.html
+++ b/index.html
@@ -1103,13 +1103,11 @@
                         <div class="swiper-slide">Slide 9</div>
                         <div class="swiper-slide">Slide 10</div>
                     </div>
-                    <!-- <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div> -->
+                    <!-- <div class="swiper-pagination1"></div>
+                    <div class="swiper-button-prev1"></div>
+                    <div class="swiper-button-next1"></div> -->
                 </div>
             </div>
-            </div>
-
         </div>
     </div>
     <!-- 主体部分结束 -->
