--- a/w_wanbiao-brand.html
+++ b/w_wanbiao-brand.html
@@ -22,8 +22,8 @@
                <img src="https://image8.wbiao.co/mall/1a7300bbbb8d459a8e7b62eae9e6e733.jpg">
             </div>
             <div class="w_slideshow-a">
-                <a class="w_slideshow-a1" href="javascript:vido(0)"></a>
-                <a class="w_slideshow-a1" href="javascript:vido(0)"></a>
+                <a class="w_slideshow-a1" href="javascript:void(0)"></a>
+                <a class="w_slideshow-a1" href="javascript:void(0)"></a>
             </div>
         </div> 
         <div class="w_blank-top2">
