主页限时购完成

--- a/index.html
+++ b/index.html
@@ -1076,16 +1076,84 @@
             <div class="index_buy_list_slider">
                 <div class="index_buy_list_swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
-                        <div class="swiper-slide">Slide 4</div>
-                        <div class="swiper-slide">Slide 5</div>
-                        <div class="swiper-slide">Slide 6</div>
-                        <div class="swiper-slide">Slide 7</div>
-                        <div class="swiper-slide">Slide 8</div>
-                        <div class="swiper-slide">Slide 9</div>
-                        <div class="swiper-slide">Slide 10</div>
+                        <div class="swiper-slide wrap">
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list1.jpg">
+                                <p>浪琴</p>
+                                <div class="index_buy_list_price">
+                                    <i>5折</i><i>¥10,100</i>
+                                </div>
+                                <del>¥20,200</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list2.jpg">
+                                <p>摩纹</p>
+                                <div class="index_buy_list_price">
+                                    <i>7.5折</i><i>¥2,460</i>
+                                </div>
+                                <del>¥3,280</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list3.jpg">
+                                <p>依百克</p>
+                                <div class="index_buy_list_price">
+                                    <i>8折</i><i>¥38,400</i>
+                                </div>
+                                <del>¥48,000</del>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list4.jpg">
+                                <p>真力时</p>
+                                <div class="index_buy_list_price">
+                                    <i>8.5折</i><i>¥37,145</i>
+                                </div>
+                                <del>¥43,700</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list5.jpg">
+                                <p>CIGA Design</p>
+                                <div class="index_buy_list_price">
+                                    <i>10折</i><i>¥999</i>
+                                </div>
+                                <del>¥999</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list6.jpg">
+                                <p>柏高</p>
+                                <div class="index_buy_list_price">
+                                    <i>7.9折</i><i>¥30,400</i>
+                                </div>
+                                <del>¥38,500</del>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list7.jpg">
+                                <p>东方双狮</p>
+                                <div class="index_buy_list_price">
+                                    <i>9折</i><i>¥972</i>
+                                </div>
+                                <del>¥1,080</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list8.jpg">
+                                <p>雪铁纳</p>
+                                <div class="index_buy_list_price">
+                                    <i>7.8折</i><i>¥4,836</i>
+                                </div>
+                                <del>¥6,200</del>
+                            </a>
+                            <a href="javascript:void(0)">
+                                <img src="images/index_buy_list9.jpg">
+                                <p>威利默克</p>
+                                <div class="index_buy_list_price">
+                                    <i>8折</i><i>¥1,999</i>
+                                </div>
+                                <del>¥2,499</del>
+                            </a>
+                        </div>
                     </div>
                     <div class="index_buy_list_swiper-button-next"></div>
                     <div class="index_buy_list_swiper-button-prev"></div>
@@ -1094,11 +1162,21 @@
             <div class="index_but_list_slider_right">
                 <div class="index_buy_list_slider_right_swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
-                        <div class="swiper-slide">Slide 4</div>
-                        <div class="swiper-slide">Slide 5</div>
+                        <a class="swiper-slide" href="javascript:void(0)">
+                            <img src="images/index_buy_right_list1.jpg">
+                        </a>
+                        <a class="swiper-slide" href="javascript:void(0)">
+                            <img src="images/index_buy_right_list2.jpg">
+                        </a>
+                        <a class="swiper-slide" href="javascript:void(0)">
+                            <img src="images/index_buy_right_list3.jpg">
+                        </a>
+                        <a class="swiper-slide" href="javascript:void(0)">
+                            <img src="images/index_buy_right_list4.jpg">
+                        </a>
+                        <a class="swiper-slide" href="javascript:void(0)">
+                            <img src="images/index_buy_right_list5.jpg">
+                        </a>
                     </div>
                     <div class="index_buy_right_swiper-pagination"></div>
                     <div class="index_buy_right_swiper-button-prev"></div>
