本月爆款版块完成

--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,7 @@
                 </li>
             </ul>
         </div>
+        <!-- 限时购开始 -->
         <div class="zd_index_time_shop wrap clearfix">
             <p class="zd_index_limit_time">限时购</p>
             <div class="zd_index_count_down_time">
@@ -1062,14 +1063,14 @@
         </div>
         <div class="index_time_to_buy clearfix wrap">
             <div class="index_time_to_buy_left_box">
-                <div class="index_time_to_buy_left">
+                <div class="index_time_to_buy_left" style="height:280px;">
                     <a href="javascript:void(0)">
                         <div class="index_time_to_buy_left_txt">
                             <p class="index_time_to_buy_left_txt1">11.11名表狂欢节 秒杀专场</p>
                             <p class="index_time_to_buy_left_txt2">限量秒杀 抢完即止</p>
                         </div>
                         <i class="index_time_to_buy_left_shadow"></i>
-                        <img src="images/index_time_to_buy_left.jpg" class="test">
+                        <img src="images/index_time_to_buy_left1.jpg">
                     </a>
                 </div>
             </div>
@@ -1183,7 +1184,48 @@
                     <div class="index_buy_right_swiper-button-next"></div>
                 </div>
             </div>
+        </div>
+        <!-- 限时购结束 -->
+        <!-- 本月爆款开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <i class="index_tab_btns_left"></i>
+            <i class="index_tab_btns_right"></i>
+            <div class="zd_index_boom_tit clearfix">
+                <p>本月爆款</p>
+                <ul>
+                    <li>臻选热销表
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                </ul>
             </div>
+            <div class="index_time_to_buy_left_box clearfix">
+                <div class="index_time_to_buy_left" style="height:360px;">
+                    <a href="javascript:void(0)">
+                        <div class="index_time_to_buy_left_txt">
+                            <p class="index_time_to_buy_left_txt1">帝舵(Tudor) #天生敢为#</p>
+                            <p class="index_time_to_buy_left_txt2">每满5000减300元 上不封顶！</p>
+                        </div>
+                        <i class="index_time_to_buy_left_shadow"></i>
+                        <img src="images/index_time_to_buy_left2.jpg">
+                    </a>
+                </div>
+            </div>
+            <div class="index_boom_list_right clearfix">
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right1.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right2.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right3.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right4.jpg">
+                </a>
+            </div>
+        </div>
+        <!-- 本月爆款结束 -->
     </div>
     <!-- 主体部分结束 -->
 
